<resources>
    // app name
    <string name="app_name">Ola Vakkola</string>

    //navigation picture
    <string name="title_activity_navi">navi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Sony Shah</string>
    <string name="nav_header_subtitle">sonyshah248@gmail.com</string>
    <string name="nav_header_desc">Ola Vakkola</string>

    <string name="action_settings">Settings</string>


    //navigation item
    <string name="title1">Home</string>
    <string name="title2">Picture Library</string>
    <string name="title3">Search</string>
    <string name="title4">Setting</string>
    <string name="title5">Logout</string>
    <string name="title6">Event</string>
    <string name="title7">Login</string>
    <string name="title8">Help and Feedback</string>
    <string name="title9">About Us</string>
    <string name="title10">Contact Us</string>

    //login page
    <string name="editText1">   Email Id</string>
    <string name="editText2">   Password</string>
    <string name="Textview">Ola Vakkola</string>
    <string name="button1">Sign In</string>
    <string name="button2">Sign Up</string>
    <string name="Textview12"> <u>Forget Your Password ?</u></string>

    //registration page
    <string name="editText">Email Id</string>
    <string name="editText3">UserName</string>
    <string name="editText4">Address</string>
    <string name="editText5">Phone No.</string>
    <string name="editText6">Password</string>
    <string name="editText7">Confirm Password</string>
    <string name="button">Sign In</string>
    <string name="Textview13">Registration</string>

    //feedback page
    <string name="editText8"> Enter your Name</string>
    <string name="editText10">Email Id</string>
    <string name="editText11">Enter phone No.</string>
    <string name="editText12">Subject</string>
    <string name="editText13">Message</string>
    <string name="Textview3">Feedback</string>


    //about us
    <string name="Textview2"> Ola Vakkola</string>
    <string name="Textview4">Consider recent trend,time availability and pace
                             of life,we are here to cater you with our excellents
                                         arrangements for various
                              <b>domestic</b> as well as <b>corporate Functions.</b>
                              Spread Over <b>4500sq ft</b>where we can cater from
                                              <b>25-400 guests.</b>
                             Its is a Perfect Venue for all your Events.
    </string>


    //contact us
    <string name="Textview5">Anand Nagar,Near Vakkola Police Staion,
                            Santacruz East, Mumbai-400055</string>

    <string name="Textview6"> +91 8070850076</string>
    <string name="Textview7">Ola Vakkola</string>
    <string name="Textview8">Contact for Flexible Bookings: <i>Mr.Reymond Gonsalves-Manager:

    </i> +91 9702386767</string>
    <string name="Textview9">Contact Us</string>

    //splace Screen
    <string name="Textview10">Ola vakkola</string>
    <string name="Textview11">Perfect place for your Special Events!</string>

    //alert for logout
    <string name="exit">Exit</string>
    <string name="exit_message">Are you sure you want to exit?</string>


</resources>
