<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sonyshah.olavakkola.feedback"
    android:background="@drawable/realbc">


    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/editText11"
        android:layout_alignStart="@+id/editText11"
        android:alpha="0.7"
        android:background="#ffffff"
        android:ems="14"
        android:hint="@string/editText8"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_above="@+id/editText12"
        android:layout_alignStart="@+id/editText12"
        android:layout_marginTop="10dp"
        android:alpha="0.7"
        android:background="#ffffff"
        android:ems="14"
        android:gravity="top"
        android:hint="@string/editText11"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/editText13"
        android:layout_alignStart="@+id/editText13"
        android:layout_marginTop="10dp"
        android:alpha="0.7"
        android:background="#ffffff"
        android:ems="14"
        android:hint="@string/editText12"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:alpha="0.7"
        android:background="#ffffff"
        android:ems="14"
        android:gravity="top"
        android:hint="@string/editText13"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:background="@android:color/holo_orange_dark"
        android:ems="10"
        android:onClick="sub"
        android:text="Submit"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/iconwhite" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView13"
        android:layout_centerHorizontal="true"
        android:text="@string/Textview"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:text="@string/Textview" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView13"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="9dp"
        android:text="TextView" />


</RelativeLayout>
