<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/realbc"
    tools:context="com.example.sonyshah.olavakkola.register">


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView13"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="14dp"
        android:alpha="0.7"
        android:background="#ffffff"
        android:ems="12"
        android:hint="@string/editText"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="10dp"
        android:alpha="0.7"
        android:background="#ffffff"
        android:ems="12"

        android:gravity="center_vertical"
        android:hint="@string/editText3"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:text="Name"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editText3"

        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView5"
        android:alpha="0.7"
        android:background="#ffffff"
        android:ems="12"
        android:hint="@string/editText4"
        android:inputType="textPostalAddress"
        android:paddingStart="5dp"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editText4"

        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView7"
        android:alpha="0.7"
        android:background="#ffffff"
        android:ems="12"
        android:hint="@string/editText5"
        android:inputType="phone"
        android:paddingStart="5dp"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_below="@+id/editText5"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView7"

        android:alpha="0.7"
        android:background="#ffffff"
        android:ems="12"
        android:hint="@string/editText6"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editText6"

        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView8"
        android:alpha="0.7"
        android:background="#ffffff"
        android:ems="12"
        android:hint="@string/editText7"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@android:color/holo_orange_dark"
        android:ems="8"
        android:onClick="login"
        android:text="@string/button"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_above="@+id/editText3"
        android:layout_toStartOf="@+id/editText"
        android:background="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/ic_email_black"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/editText3"
        android:layout_toStartOf="@+id/editText3"
        android:background="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/ic_person_add_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/editText4"
        android:layout_toStartOf="@+id/editText4"
        android:background="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/ic_place_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/imageView6"
        android:layout_alignTop="@+id/editText5"
        android:background="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/ic_phone_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_above="@+id/editText7"
        android:layout_toStartOf="@+id/editText6"
        android:background="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/ic_lock_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/editText7"
        android:layout_toStartOf="@+id/editText7"
        android:background="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/ic_lock_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_above="@+id/editText7"
        android:layout_alignEnd="@+id/editText6"
        android:layout_marginBottom="3dp"
        app:srcCompat="@drawable/ic_visibility_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/editText7"
        android:layout_alignStart="@+id/imageView9"
        android:layout_marginBottom="3dp"
        app:srcCompat="@drawable/ic_visibility_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        app:srcCompat="@drawable/iconwhite" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView26"
        android:layout_centerHorizontal="true"
        android:text="Ola Vakkola"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

</RelativeLayout>
